	  file formats
	+ added class-counting to mootHMMTrainer (tests ok)
	+ added class compilation to mootHMM (tests ok)
	  - old mootHMM behavior can be emulated by achieved
	    by removing .clx (class-frequency) file
	+ CHMM behavior reduced to HMM tests OK (good ol' 95.67% correct)
	  - weirdness: gaspode class fixes bungled... must investigate
	+ added verbose information tracking to HMM
	+ Todo:
	  - (added, untested) add & test binary I/O for mootClassfreqs
	  - rename 'moothmm' -> 'moot'
	  - move compilation / dump to a separate program 'mootcompile' ?
	  - add XML I/O (subclass of mootToken(Reader|Writer) ?)
	    ~ test effect of virtuals here
	
v1.0.5 Fri, 21 May 2004 14:14:31 +0200
  + extracting FSM dependencies to 'mootm' package
	
moot-v1.0.4 Fri, 12 Dec 2003 02:06:59 +0100
  + renamed from 'dwdst' to 'moot'
  + added additional detection routines for libFSM >= v0.1.1.1
  + added --disable-fsm flag to ./configure
  + added placebo classes methods in src/libmoot/mootFSM.h
	- now compiles without libFSM: nothing much interesting works,
	  but at least it compiles...
	
v1.0.3 Tue,  2 Dec 2003 02:13:52 +0100
  + changes for compilation with g++-3.2
    - removed many redundant param-default specifications in non-prototype declarations
    - liberally sprinkled 'typename' keywords where g++ requested them
    - removed 'dopen()' method from [io]ccBinStream -- looks like
      there's no good way to make c++ streams jive with fds: ugly but true.
  + NOTE:
    - problems compiling on helios (RedHat) with a newer version
	of bison++ (i.e. not my 'flex++bison++' package) -- g++ eventually
	pukes with a complaint about 'YY_BUFFER_STATE' not being a defined
	type.  SOLUTION: dropping in 'flexskel.*', 'bison.*' from the native
	flex++ / bison++ distribution(s) seems to have fixed things.
	
v1.0.2 Mon, 25 Aug 2003 04:04:44 +0200
  + added mootHMMTrainer class and executable 'mootrain'
	- names may change to speed things up for fully supervised training