@@ -37,6 +37,7 @@ v2.0.0pre1 Sat, 29 May 2004 01:59:14 +0200
 	+ CHMM behavior reduced to HMM tests OK (good ol' 95.67% correct)
 	  - weirdness: gaspode class fixes bungled... must investigate
 	+ added verbose information tracking to HMM
+	+ added evaluator program 'mooteval' : could use more stats
 	+ Todo:
 	  - (added, untested) add & test binary I/O for mootClassfreqs
 	  - rename 'moothmm' -> 'moot'
